DeepSORT and YOLOv8. Trying to compare the data, first draft of the process.

--- a/1_sort/sort_tracking.ipynb
+++ b/1_sort/sort_tracking.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "cf1d2142",
    "metadata": {},
    "outputs": [
@@ -64,11 +64,8 @@
     }
    ],
    "source": [
-    "# sort_tracking.ipynb (Python notebook tartalom)\n",
-    "\n",
-    "# 1. Környezet előkészítése\n",
-    "%pip install ultralytics opencv-python filterpy --quet\n",
-    "%pip install scikit-image --quiet\n"
+    "%pip install -q ultralytics opencv-python filterpy\n",
+    "%pip install -q scikit-image\n"
    ]
   },
   {
@@ -95,13 +92,21 @@
     "sys.path.append(\"sort\")\n",
     "from sort import Sort  # SORT tracker\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
     "# 2. Load video\n",
-    "video_path = \"cars_on_the_highway.mp4\"\n",
+    "video_path = \"../utilities/cars_on_the_highway.mp4\"\n",
+    "if not os.path.exists(video_path):\n",
+    "    raise FileNotFoundError(f\"Video file {video_path} not found. Please check the path.\")\n",
+    "\n",
     "cap = cv2.VideoCapture(video_path)\n",
     "\n",
     "# 3. Load YOLO model for detection\n",
-    "model = YOLO(\"yolov8n.pt\")  # or yolov8s.pt\n",
+    "model_path = \"../utilities/yolov8n.pt\"  # Path to your YOLO model\n",
+    "if not os.path.exists(model_path):\n",
+    "    raise FileNotFoundError(f\"Model file {model_path} not found. Please check the path.\")\n",
+    "\n",
+    "model = YOLO(model_path)\n",
     "\n",
     "# 4. Inicialize SORT tracker\n",
     "tracker = Sort()\n",
@@ -136,20 +141,16 @@
     "        x1, y1, x2, y2, track_id = track.astype(int)\n",
     "        tracked_data.append([frame_idx, track_id, x1, y1, x2, y2])\n",
     "        \n",
-    "        # Opcionális megjelenítés\n",
     "        cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
     "        cv2.putText(frame, f\"ID {track_id}\", (x1, y1 - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
     "\n",
     "    frame_idx += 1\n",
-    "    cv2.namedWindow(\"Tracking\", cv2.WINDOW_NORMAL)\n",
-    "    cv2.resizeWindow(\"Tracking\", 800, 600)\n",
-    "    cv2.imshow(\"Tracking\", frame)\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break\n",
+    "    # cv2.namedWindow(\"Tracking\", cv2.WINDOW_NORMAL)\n",
+    "    # cv2.resizeWindow(\"Tracking\", 800, 600)\n",
+    "    # cv2.imshow(\"Tracking\", frame)\n",
+    "    # if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "    #     break\n",
     "\n",
-    "    # ...\n",
-    "    # out = cv2.VideoWriter(\"output_tracking.mp4\", ...)\n",
-    "    # out.write(frame)\n",
     "\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()\n",
