Correcting pip commands.

--- a/1_sort/sort_tracking.ipynb
+++ b/1_sort/sort_tracking.ipynb
@@ -65,7 +65,8 @@
    ],
    "source": [
     "%pip install -q ultralytics opencv-python filterpy\n",
-    "%pip install -q scikit-image\n"
+    "%pip install -q scikit-image\n",
+    "%pip install -q matplotlib pandas"
    ]
   },
   {
