--- a/2_deepsort/deepsort_tracking.ipynb
+++ b/2_deepsort/deepsort_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2f2fa44a",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,8 @@
     }
    ],
    "source": [
-    "%pip install -q ultralytics deep_sort_realtime opencv-python\n"
+    "%pip install -q ultralytics deep_sort_realtime opencv-python\n",
+    "%pip install -q matplotlib pandas numpy"
    ]
   },
   {
