--- a/3_yolov8/yolov8_tracking.ipynb
+++ b/3_yolov8/yolov8_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e5d34d13",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,8 @@
     }
    ],
    "source": [
-    "%pip install -q ultralytics opencv-python\n"
+    "%pip install -q ultralytics opencv-python\n",
+    "%pip install -q pandas"
    ]
   },
   {
