Final changes according to project description

--- a/1_sort/sort_tracking.ipynb
+++ b/1_sort/sort_tracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4ebcd980",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cloning into 'sort'...\n"
+      "fatal: destination path 'sort' already exists and is not an empty directory.\n"
      ]
     }
    ],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cf1d2142",
    "metadata": {},
    "outputs": [
@@ -36,14 +36,24 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Usage:   \n",
-      "  c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install [options] <requirement specifier> [package-index-options] ...\n",
-      "  c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install [options] -r <requirements file> [package-index-options] ...\n",
-      "  c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install [options] [-e] <vcs project url> ...\n",
-      "  c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install [options] [-e] <local project path> ...\n",
-      "  c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install [options] <archive url/path> ...\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "no such option: --quet\n"
+      "[notice] A new release of pip is available: 24.3.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     },
     {
@@ -71,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "27440ef5",
    "metadata": {},
    "outputs": [
@@ -94,6 +104,10 @@
     "from sort import Sort  # SORT tracker\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "import time\n",
+    "\n",
+    "# 1. Start timer\n",
+    "start_time = time.time()\n",
     "\n",
     "# 2. Load video\n",
     "video_path = \"../utilities/cars_on_the_highway.mp4\"\n",
@@ -101,6 +115,7 @@
     "    raise FileNotFoundError(f\"Video file {video_path} not found. Please check the path.\")\n",
     "\n",
     "cap = cv2.VideoCapture(video_path)\n",
+    "total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "\n",
     "# 3. Load YOLO model for detection\n",
     "model_path = \"../utilities/yolov8n.pt\"  # Path to your YOLO model\n",
@@ -156,7 +171,17 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()\n",
     "\n",
-    "# 6. Saving data to .csv file\n",
+    "# 6. End timer\n",
+    "end_time = time.time()\n",
+    "runtime = end_time - start_time\n",
+    "fps = total_frames / runtime if runtime > 0 else 0\n",
+    "\n",
+    "# 7. Save performance log\n",
+    "with open(\"sort_performance.txt\", \"w\") as f:\n",
+    "    f.write(f\"{runtime:.2f}\\n\")\n",
+    "    f.write(f\"{fps:.2f}\")\n",
+    "\n",
+    "# 8. Saving data to .csv file\n",
     "columns = [\"frame\", \"id\", \"x1\", \"y1\", \"x2\", \"y2\"]\n",
     "df = pd.DataFrame(tracked_data, columns=columns)\n",
     "df.to_csv(\"trajectory_data_sort.csv\", index=False)\n",
