--- a/2_deepsort/deepsort_tracking.ipynb
+++ b/2_deepsort/deepsort_tracking.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2f2fa44a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -30,10 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "02617488",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\deep_sort_realtime\\embedder\\embedder_pytorch.py:6: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -50,6 +74,10 @@
     "from ultralytics import YOLO\n",
     "from deep_sort_realtime.deepsort_tracker import DeepSort\n",
     "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "\n",
+    "# 1. Start timer\n",
+    "start_time = time.time()\n",
     "\n",
     "# 2. Load video\n",
     "video_path = \"../utilities/cars_on_the_highway.mp4\"\n",
@@ -57,6 +85,7 @@
     "    raise FileNotFoundError(f\"Video file {video_path} not found. Please check the path.\")\n",
     "\n",
     "cap = cv2.VideoCapture(video_path)\n",
+    "total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "\n",
     "# 3. Load YOLO model for detection\n",
     "model_path = \"../utilities/yolov8n.pt\"  # Path to your YOLO model\n",
@@ -65,10 +94,10 @@
     "\n",
     "model = YOLO(model_path)\n",
     "\n",
-    "# 4. Deep SORT inicializálása\n",
+    "# 4. Inicialize DeepSORT tracker\n",
     "tracker = DeepSort(max_age=30)\n",
     "\n",
-    "# 5. Tracking adatok tárolására lista\n",
+    "# 5. Storing tracking data\n",
     "tracked_data = []\n",
     "frame_idx = 0\n",
     "\n",
@@ -111,7 +140,17 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()\n",
     "\n",
-    "# 6. Eredmények mentése CSV-be\n",
+    "# 6. End timer\n",
+    "end_time = time.time()\n",
+    "runtime = end_time - start_time\n",
+    "fps = total_frames / runtime if runtime > 0 else 0\n",
+    "\n",
+    "# 7. Save performance log\n",
+    "with open(\"deepsort_performance.txt\", \"w\") as f:\n",
+    "    f.write(f\"{runtime:.2f}\\n\")\n",
+    "    f.write(f\"{fps:.2f}\")\n",
+    "\n",
+    "# 8. Saving data to .csv file\n",
     "columns = [\"frame\", \"id\", \"x1\", \"y1\", \"x2\", \"y2\"]\n",
     "df = pd.DataFrame(tracked_data, columns=columns)\n",
     "df.to_csv(\"trajectory_data_deepsort.csv\", index=False)\n",
